added definitions for bulk update, jobs and tags
